--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "babel": "^5.5.7"
   },
   "dependencies": {
+    "font-awesome": "^4.3.0",
     "id3js": "^1.1.3",
     "keymaster": "^1.6.2",
     "lodash": "^3.9.3",
