--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "keymaster": "^1.6.2",
     "lodash": "^3.9.3",
     "mp4js": "0.0.2",
+    "node-dir": "^0.1.8",
     "react": "^0.13.3"
   }
 }
