--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "main": "index.js",
+  "scripts": {
+    "start": "electron index.js 2>&1"
+  },
   "devDependencies": {
     "babel": "^5.5.7"
   },
